# coursework

./: .gitignore  LICENSE  README.md
rpn-calculator/: README.md  calculator.js  calculator.test.js  package-lock.json  package.json
weather-graph/: CMakeLists.txt  README.md
weather-graph/include/: WeatherMain.h
weather-graph/include/models/: Candlestick.h  Temp.h  TempSet.h
weather-graph/include/utils/: CSVReader.h
weather-graph/src/: WeatherMain.cpp  main.cpp
weather-graph/src/models/: Candlestick.cpp  Temp.cpp  TempSet.cpp
weather-graph/src/utils/: CSVReader.cpp
weather-graph/tests/: test_input.txt
